--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Social Network React Template"
+      content=" Network React Template"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -17,11 +17,11 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="stylesheet" href="assets/css/themify-icons.css">
-    <link rel="stylesheet" href="assets/css/feather.css">
+    <link rel="stylesheet" href="/assets/css/themify-icons.css">
+    <link rel="stylesheet" href="/assets/css/feather.css">
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/emoji.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/emoji.css">
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sociala || Social Network React Template</title>
+    <title>ODIN E-SPORT</title>
   </head>
   <body class="color-theme-blue mont-font loaded theme-light">
     <noscript>You need to enable JavaScript to run this app.</noscript>
