fix partage post and ui code login

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content=" Network React Template"
+      content=" ODIN ESPORT"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
